force-app/main/default/objects/Portal_Object_Field__c/Portal_Object_Field__c.object-meta.xml
<CustomObject>
    <label>Portal Object Field</label>
    <nameField>
        <displayFormat>POF-{0000}</displayFormat>
        <label>Portal Object Field		 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Object Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>