force-app/main/default/objects/Portal_Object_Field__c/fields/Is_System_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System Field</label>
    <type>Checkbox</type>
</CustomField>