force-app/main/default/objects/Portal_Object_Field__c/fields/Portal_Object__c.field-meta.xml
<CustomField>
    <fullName>Portal_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Object</label>
    <referenceTo>Portal_Object__c</referenceTo>
    <relationshipLabel>Portal Object Fields</relationshipLabel>
    <relationshipName>Portal_Object_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>